# lib_osm

./: CMakeLists.txt  README.md  api.v.0.6.dtd  bld.bat  leaflet_carto_ajax.html  leaflet_carto_xmlreq.html  lib_osm.cc  lib_osm.hh  osm_read.cc
libhpxml/src/: bstring.c  bstring.h  libhpxml.c  libhpxml.h
